@startuml DeleteCommandArchitectureDiagram
package "seedu.command" {
    class DeleteCommand {
        +execute(args: String[])
        +deleteSingleRecord(recordIndex: int)
        +deleteAllRecords()
        +deleteHeaderAndColumn(fieldName: String)
        +deleteRangeRecords(start: int, end: int)
    }
}

package "seedu.model" {
    class Inventory
}

package "seedu.storage" {
    class Csv
}

package "seedu.ui" {
    class Ui
}

DeleteCommand --> Inventory : modifies
DeleteCommand --> Csv : updates
DeleteCommand --> Ui : displays
@enduml
